--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "vite-plugin-solid": "^2.11.6"
   },
   "dependencies": {
-    "solid-js": "^1.9.5"
+    "lancaster-stemmer": "^2.1.0",
+    "solid-js": "^1.9.5",
+    "stemmer": "^2.0.1"
   },
   "packageManager": "yarn@4.8.1"
 }
